# curriculumV

./: .gitignore  AGENTS.md  Dockerfile  README.md  app.py  index.html  package-lock.json  package.json  pyproject.toml  renovate.json  sonar-project.properties  vite.config.js
.github/scripts/: pr_ai_config.json  pr_ai_summary.py
.github/workflows/: app-ci.yml  ci.yml  pr-ai-summary-reusable.yml  trivy-scan-reusable.yml
helm/curriculum-v/: Chart.yaml  values.yaml
helm/curriculum-v/argocd/: application.yaml
helm/curriculum-v/templates/: deployment.yaml  httproute.yaml
src/: App.jsx  App.test.jsx  index.css  main.test.jsx  test-setup.js
src/components/: Background.jsx  Background.test.jsx  CV.jsx  CV.test.jsx  Footer.jsx  Footer.test.jsx  GlassOrbs.jsx  GlassOrbs.test.jsx
src/data/: resume.yaml
src/utils/: export.js  export.test.js
